--- a/templates/port119/root_d.html.twig
+++ b/templates/port119/root_d.html.twig
@@ -5,6 +5,8 @@
 <img src="{{ avataruri }}"> || Wątek "{{ groupname }}" | Ilość wpisów: {{ cnt }} | <a href="{{ path('discuss2_new', {'id': groupid, 'page': 1}) }}">Nowy wpis</a>
 <br /><br />
 
+blah
+
 Moderatorzy:<br>
 
 {% for key, value in gcdn %}
