--- a/templates/root3.html.twig
+++ b/templates/root3.html.twig
@@ -162,11 +162,38 @@ body
     <ul class="navbar-nav">
       <li class="nav-item active">
         <b>
-		<a class="navbar-brand lcolor" href="{{ path('hello_world') }}">zaloguj</a>
+                  <a class="navbar-brand lcolor" href="/">port119</a>
         </b>
       </li>
 
 
+</div>
+</div>
+
+<div class="prawa_strona_top col-lg-6">
+   
+
+<div class="poszial_prawa row">
+
+<nav class="navbar navbar-expand-lg">
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+      </li>
+        <li class="nav-item active">
+                <b><a class="navbar-brand lcolor" href="{{ path('hello_world') }}">zaloguj</a></b>
+        </li>
+      </ul>
+  </div>
+</nav>
+
+
+</div>
 </div>
 </nav>
 </div>
