--- a/templates/port119/groupall.html.twig
+++ b/templates/port119/groupall.html.twig
@@ -22,7 +22,7 @@ Wszystkie wątki<br />
 
 <table border=1>
 		<tr><td>Właściciel</td><td>Awatar</td><td>Nazwa</td><td>Posty / Ostatni</td><td>Admini</td><td>Aktywny?</td><td>Otwarty?</td><td>Opis</td><td>Data utworzenia</td><td>Akcja</td></tr>
-{% for ag in allgroups %}
+{% for ag in thread_allgroups %}
 <tr><td><a href="{{ path('userspace', {'uid': ag.owner.id}) }}"> {{ ag.owner }} </a></td><td><a href="{{ path('discuss2', {'name': ag.name, 'page': 1}) }}"><img src="/groupavatar/{{ ag.id }}.jpeg"></a></td><td><a href="{{ path('discuss2', {'name': ag.name, 'page': 1}) }}">{{ ag.name }}</a></td>
 <td>{{ ccnt[ag.id] }} / {{ last[ag.id] }}</td>
 <td>
@@ -88,8 +88,11 @@ zamknięty
 {% endfor %}
 </table>
 
+
 {% else %}
 Brak wątków
 {% endif %}
+
+{{ navi| raw }}
 
 {% endblock %}
