--- a/templates/port119/groupall.html.twig
+++ b/templates/port119/groupall.html.twig
@@ -23,7 +23,7 @@ Wszystkie wątki<br />
 		<tr><td>Właściciel</td><td>Awatar</td><td>Nazwa</td><td>Posty / Ostatni</td><td>Admini</td><td>Aktywny?</td><td>Otwarty?</td><td>Opis</td><td>Data utworzenia</td><td>Akcja</td></tr>
 {% for ag in thread_allgroups %}
 <tr><td><a href="{{ path('userspace', {'uid': ag.owner.id}) }}"> {{ ag.owner }} </a></td><td><a href="{{ path('discuss2', {'name': ag.name, 'page': 1}) }}"><img src="/groupavatar/{{ ag.id }}.jpeg"></a></td><td><a href="{{ path('discuss2', {'name': ag.name, 'page': 1}) }}">{{ ag.name }}</a></td>
-<td>{{ ccnt[ag.id] }} / {{ last[ag.id] }}</td>
+<td>{{ ccnt[ag.id] }} / {{ lastf[ag.id] }}</td>
 <td>
 {% for k, v in gcdn %}
 	{% if k == ag.name %}
@@ -51,7 +51,7 @@ zamknięty
 <td>{{ abouts[ag.id] }}
 </td>
 <td>
-{{ ag.createdat|date('Y-m-d H-i-s') }}
+{{ luty[ag.id] }}
 </td>
 
 <td>
