--- a/templates/port119/admgroup.html.twig
+++ b/templates/port119/admgroup.html.twig
@@ -15,7 +15,7 @@
   {% if adm.accounts == username %}
 	<tr><td><a href="{{ path('userspace', {'uid': adm.groups.owner.id}) }}">{{ adm.groups.owner }}</a></td><td><a href="{{ path('discuss2', {'name': adm.groups.name, 'page': 1}) }}"><img src="/groupavatar/{{ adm.groups.id }}.jpeg"></a></td><td><a href="{{ path('discuss2', {'name': adm.groups.name, 'page': 1}) }}">{{ adm.groups.name }}</a></td>
 <td>
-{{ ccnt[adm.groups.id] }} / {{ last[adm.groups.id] }}
+{{ ccnt[adm.groups.id] }} / {{ lastf[adm.groups.id] }}
 </td>
 
 <td>
@@ -48,7 +48,7 @@
 </td>
 <td>{{ abouts[adm.groups.id] }}</td>
 
-<td>{{ adm.groups.createdat|date('Y-m-d H-i-s') }}</td>
+<td>{{ luty[adm.groups.id] }}</td>
 
 
 <td>
