--- a/templates/port119/groupall.html.twig
+++ b/templates/port119/groupall.html.twig
@@ -56,7 +56,7 @@ zamknięty
 
 <td>
 
-
+blah ||  | 
 {% if subhash[ag.name] is defined %}
 
 <a href="{{ path('group_user_unsubscribe', {'groupid': ag.id}) }}">nie subskrybuj</a>
@@ -81,6 +81,7 @@ zamknięty
         {% endif %}
 {% endfor %}
 
+|  || blah
 
 </td>
 </tr>
