--- a/templates/port119/index.html.twig
+++ b/templates/port119/index.html.twig
@@ -10,14 +10,14 @@
 	<div class="row">
 		<div class="col-sm-8">
 			Wizyty: <a href="{{ path('userspace', {'uid': uid}) }}">na Twoim profilu</a>
-<br />			ostatnie wątki (ilość {{ grcnt }})
+<br />			ostatnie wątki (ilość {{ grcnt }}) 
 
 {% set subhash = [] %}
 {% for sub in subscriptions %}
 {% for k, v in gcdn %}
 	{% if k == sub.groups.name %}
 		{% for k1, v1 in v %}
-			{% set subhash = subhash|merge({(sub.groups.name): 1}) %}}
+			{% set subhash = subhash|merge({(sub.groups.name): 1}) %}
 		{% endfor %}
 	{% endif %}
 {% endfor %}
