--- a/templates/port119/friends2.html.twig
+++ b/templates/port119/friends2.html.twig
@@ -99,7 +99,8 @@ function zmiana() {
 //      const sid = '5127bf16ac39446eb523f8e762f9bcdf';
 
 
-	const host  = "{{ host }}";
+	// const host  = "{{ host }}";
+        const host = "port11.pl";
 
         const len = tekst.length;
         console.log("len: " + len);
