--- a/templates/port119/friends2.html.twig
+++ b/templates/port119/friends2.html.twig
@@ -100,7 +100,7 @@ function zmiana() {
 
 
 	// const host  = "{{ host }}";
-        const host = "port11.pl";
+        // const host = "port11.pl";
 
         const len = tekst.length;
         console.log("len: " + len);
@@ -122,8 +122,8 @@ function zmiana() {
                 });
 
 
-                //$.getJSON("https://port119.pl/jq",
-                $.getJSON(host + "/top/jq",
+                $.getJSON("https://port119.pl/jq",
+                //$.getJSON(host + "/top/jq",
                 {
                         "arg": tekst,
         //              "headers": { Cookie: "SID=" + sid },
