--- a/templates/port119/friends2.html.twig
+++ b/templates/port119/friends2.html.twig
@@ -122,7 +122,7 @@ function zmiana() {
                 });
 
 
-                $.getJSON("https://port119.pl/jq",
+                $.getJSON("https://port119.pl/top/jq",
                 //$.getJSON(host + "/top/jq",
                 {
                         "arg": tekst,
