--- a/templates/port119/friends2.html.twig
+++ b/templates/port119/friends2.html.twig
@@ -133,6 +133,7 @@ function zmiana() {
 }
 
 function wynik(wartosc) {
+        console.log("blah");
         //$('#selekt').children().remove();
         $('#friends2_selekt').children().remove();
         for (opcja in wartosc) {
