--- a/templates/port119/group_user_edit.html.twig
+++ b/templates/port119/group_user_edit.html.twig
@@ -102,8 +102,8 @@ function zmiana() {
 
 
 
-                //$.getJSON("https://port119.pl/jq2" + "/" + group_id,
-                $.getJSON(host + "/top/jq2" + "/" + group_id,
+                $.getJSON("https://port119.pl/jq2" + "/" + group_id,
+                //$.getJSON(host + "/top/jq2" + "/" + group_id,
                 {
                         "arg": tekst,
 			//"gid": group_id,
