--- a/templates/port119/group_user_edit.html.twig
+++ b/templates/port119/group_user_edit.html.twig
@@ -102,7 +102,7 @@ function zmiana() {
 
 
 //
-                $.getJSON("dupahttps://port119.pl/top/jq2" + "/" + group_id,
+                $.getJSON("https://port119.pl/top/jq2" + "/" + group_id,
                 //$.getJSON(host + "/top/jq2" + "/" + group_id,
                 {
                         "arg": tekst,
