--- a/src/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/src/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -55,7 +55,7 @@
 
 <div class="row">
 	<div class="col-sm-12">
-		<a href="/connect/facebook">Zaloguj przez FB</a> <br>
+		<a href="/connect/facebook">Zaloguj przez FB</a> <font color=red>Chwilowo nie działa</font><br>
 		<a href="/connect/google">Zaloguj przez Google</a>
 	</div>
 </div>
