--- a/templates/port119/content2_edit.html.twig
+++ b/templates/port119/content2_edit.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 {% if avfile is not null  %}
-<img src=/content/img/{{ avfile }}><br />
+<img src=/content/img/{{ avfile }}?ts={{ ts }}><br />
 {% endif %}
 
 Edytuj wpis
