--- a/templates/port119/root3.html.twig
+++ b/templates/port119/root3.html.twig
@@ -35,7 +35,7 @@
 
 	{% if allgroups %}
 		{% for ag in thread_allgroups %}
-                	<tr><td><a href="{{ path('userspace', {'uid': ag.owner.id}) }}"> {{ ag.owner }} </a></td><td><a href="{{ path('show_discuss', {'name': ag.name, 'page': 1}) }}"><img src="/groupavatar/{{ ag.id }}.jpeg"></a></td><td><a href="{{ path('show_discuss', {'name': ag.name, 'page': 1}) }}">{{ ag.name }}</a></td><td>{{ ccnt[ag.id] }} / {% if ccnt[ag.id] %}{{ lastf[ag.id] }} {% endif %}</td>
+                	<tr><td><a href="{{ path('userspace', {'uid': ag.owner.id}) }}"> {{ ag.owner }} </a></td><td><a href="{{ path('show_discuss', {'name': ag.name, 'page': 1}) }}"><img src="/groupavatar/{{ ag.id }}.jpeg?{{ ts }}"></a></td><td><a href="{{ path('show_discuss', {'name': ag.name, 'page': 1}) }}">{{ ag.name }}</a></td><td>{{ ccnt[ag.id] }} / {% if ccnt[ag.id] %}{{ lastf[ag.id] }} {% endif %}</td>
 			<td>
 			{% for k, v in gcdn %}
 				{% if k == ag.name %}
