--- a/templates/port119/usergallery.html.twig
+++ b/templates/port119/usergallery.html.twig
@@ -37,7 +37,7 @@ Dodaj album<br>
 
 <a href="{{ path('user_gallery_content', {'uid': userid, 'gid': v}) }}">
 
-<img src="/gallery/{{ userid }}/{{ v }}/cover.jpeg">
+<img src="/gallery/{{ userid }}/{{ v }}/cover.jpeg?ts={{ ts }}">
 </a> 
 
 
