--- a/templates/port119/gallery_comment.html.twig
+++ b/templates/port119/gallery_comment.html.twig
@@ -7,7 +7,7 @@
 
 {% for k, v in content %}
 
-<tr><td>{{ v.createdat|date('Y-m-d H-i-s') }}</td><td><img src="/avatar/{{ v.uid.id}}.jpeg"> {{ v.uid }}</td><td>{{ gcnt[v.filename]|raw }}</td><td>{% if editmark[v.uid.id] is defined %}<a href="{{ path('user_gallery_comment_edit', {'gcid': v.id, 'imgid': imgid}) }}">edytuj</a> {% endif %} <a href="{{ path('user_gallery_comment_delete', {'uid': v.uid.id, 'imgid': imgid, 'fname': v.filename}) }}">usuń</a></td></tr>
+<tr><td>{{ v.createdat|date('Y-m-d H-i-s') }}</td><td><img src="/avatar/{{ v.uid.id}}.jpeg?ts={{ ts }}"> {{ v.uid }}</td><td>{{ gcnt[v.filename]|raw }}</td><td>{% if editmark[v.uid.id] is defined %}<a href="{{ path('user_gallery_comment_edit', {'gcid': v.id, 'imgid': imgid}) }}">edytuj</a> {% endif %} <a href="{{ path('user_gallery_comment_delete', {'uid': v.uid.id, 'imgid': imgid, 'fname': v.filename}) }}">usuń</a></td></tr>
 
 {% endfor %}
 
